# krassite

./: .env.example  .gitignore  Dockerfile  Place.xlsx  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
krassite/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
news/: admin.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
places/: admin.py  models.py
