[tool.poetry]
name = "work-test"
version = "0.1.0"
description = ""
authors = ["korchizhinskiy <korchizhinskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "work_test"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
