[tool.poetry]
name = "work-test"
version = "0.1.0"
description = ""
authors = ["korchizhinskiy <korchizhinskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "work_test"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"
django-summernote = "^0.8.20.0"
celery = "^5.2.7"
redis = "^4.4.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"
pyright = "^1.1.285"
django-stubs = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
